<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mor Fit Run</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="ok">OK</string>
    <string name="wrong_password_length">Password must be at least 8 characters</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password">Forgot password</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="birthday">Birthday</string>
    <string name="gender">Gender</string>
    <string name="races">Races</string>
    <string name="delete_notification">You really want to delete the race</string>
    <string name="login_authorizing">Authorizing…</string>
    <string name="login_registering">Registration…</string>
    <string name="login_registering_completed">Registration success!</string>

    <!-- create race fragment -->
    <string name="create_race">Create Race</string>
    <string name="create">Create</string>
    <string name="hint_run_title">Run title</string>
    <string name="hint_description">Description</string>
    <string name="start_on">Start on</string>
    <string name="deadline">Deadline</string>
    <string name="repeat">Repeat</string>
    <string name="limit">Limit</string>

    <!-- race view fragment -->
    <string name="edit">Edit</string>
    <string name="start">Start</string>
    <string name="organizer">Organizer</string>
    <string name="schedule">Schedule</string>
    <string name="next_run">Next run</string>
    <string name="available_places">Available places</string>
    <string name="add">Add</string>
    <string name="empty_date">__/__/__</string>
    <string name="tab_all">All</string>
    <string name="tab_new">New</string>
    <string name="tab_canceled">Canceled</string>
    <string name="tab_timer">Timer</string>
    <string name="tab_a_z">A-Z</string>
    <string name="tab_offline">Offline</string>
    <string name="registered_runners">Registered runners</string>
    <string name="add_runner_manualy">Add runner manualy</string>
    <string name="see_on_map">See on map</string>

    <!-- edit race fragment -->
    <string name="edit_race">Edit Race</string>
    <string name="cancel_next">Cancel</string>
    <string name="modify">Modify</string>
    <string name="cancel_all">Cancel All</string>

    <!-- timer fragment -->
    <string name="timer">Timer</string>
    <string name="a_z">A-Z</string>
    <string name="offline">Offline</string>
    <string name="split">Split</string>
    <string name="finish">Finish</string>
    <string name="reset">Reset</string>
    <string name="pos">Pos</string>
    <string name="time">Time</string>
    <string name="name">Name</string>

    <!-- settings fragment -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm</string>
    <string name="sample_text">Sample text</string>
    <string name="save">Save</string>
    <string name="error_email_not_valid">Email address not valid</string>
    <string name="min_password_length">Min count of symbols - 8</string>
    <string name="no_confirm_password">Password and confirm password is not match!</string>
    <string name="your_age">Your age</string>
    <string name="incorrect_age">Age  50 and Age>12</string>
    <string name="cancel">Cancel</string>
    <string name="button_split">Split</string>
    <string name="button_start">Start</string>
    <string name="button_finish">Finish</string>
    <string name="header_pos">Pos</string>
    <string name="header_time">Time</string>
    <string name="header_name">Name</string>
    <string name="timer_zero">00:00:00.000</string>
    <string name="tbd">TBD</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--record fragment-->
    <string name="record_track">Record track</string>
    <string name="distance">Distance</string>
    <string name="elevation">Elevation</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="dialog_location_permission_title">MFR needs access to your location. Please turn on location access.</string>
    <string name="close_dialog_title">Record race continues</string>
    <string name="save_and_exit">Save and exit</string>
    <string name="ignore">Ignore</string>
    <string name="settings">Settings</string>
    <string name="please_wait">Please wait</string>
    <string name="location_permission_request">Location permission request</string>

    <!--        FORGOT PASSWORD DIALOG          -->
    <string name="dialog_forgot_password_title">Forgot password?</string>
    <string name="dialog_forgot_password_enter_email">Enter the email address</string>
    <string name="dialog_forgot_password_cancel">CANCEL</string>
    <string name="dialog_forgot_password_send">SEND</string>
    <string name="hint_run_id">Run ID</string>
    <string name="set_date_first">Set date first</string>
    <string name="add_runner">Add Runner</string>
    <string name="profile">Profile</string>
    <string name="invite_user">Invite user</string>
</resources>
