<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/default_margin"
    android:visibility="gone"
    android:padding="20dp" >

    <TextView
        android:id="@+id/tvName_FP"
        style="@style/AppTheme.TextView"
        android:text="@string/name" />


    <TextView
        android:id="@+id/tvEmail_FP"
        style="@style/AppTheme.TextView"
        android:layout_below="@id/tvName_FP"
        android:text="@string/email" />

    <TextView

        android:id="@+id/tvBirthDay_FP"
        style="@style/AppTheme.TextView"
        android:layout_below="@id/tvEmail_FP"
        android:text="@string/birthday" />

    <TextView

        android:id="@+id/tvBirthDate_FP"
        style="@style/AppTheme.TextView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/tvEmail_FP"
        android:text="@string/empty_date" />


    <TextView
        android:id="@+id/tvGender_FP"
        style="@style/AppTheme.TextView"
        android:layout_below="@id/tvBirthDay_FP"
        android:text="@string/gender" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ivGender_FP"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/tvBirthDay_FP"
        android:layout_gravity="center_vertical"
        android:src="@drawable/male" />


</RelativeLayout>


