<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="9"
    android:padding="2dp"
    android:background="@color/primary_blue">
    <TextView

        style="@style/AppTheme.TextView_ItemRunners"
        android:layout_weight="2"
        android:textColor="@color/text_color_white"
        android:text="@string/header_pos"
        />
    <TextView

        style="@style/AppTheme.TextView_ItemRunners"
        android:layout_weight="3"
        android:textColor="@color/text_color_white"
        android:text="@string/header_time"

        />
    <TextView
       style="@style/AppTheme.TextView_ItemRunners"
        android:layout_weight="4"
        android:textColor="@color/text_color_white"
        android:text="@string/header_name"/>

</LinearLayout>