<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:custom="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/layout_padding"
        android:paddingLeft="@dimen/layout_padding"
        android:paddingRight="@dimen/layout_padding"
        android:gravity="center"
        android:visibility="gone"
        >



        <com.andreabaccega.widget.FormEditText
            android:id="@+id/etNameEditable_FP"
            style="@style/AppTheme.EditText"
            android:hint="@string/hint_name"
            custom:testType="alpha"
            />


        <com.andreabaccega.widget.FormEditText
            android:id="@+id/etEmailEditable_FP"
            style="@style/AppTheme.EditText"
            custom:testType="email"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_email"
            />



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            >
            <TextView
                android:id="@+id/tvBirthdayEditable_FP"
                style="@style/AppTheme.TextView"
                android:text="@string/birthday"
                />
            <TextView

                style="@style/AppTheme.TextView"
                android:layout_width="120dp"
                android:layout_centerHorizontal="true"
                android:id="@+id/tvBirthDateEditable_FP"
                android:text="@string/empty_date"
                android:gravity="center"

                />
            <TextView
                style="@style/AppTheme.TextView"
                android:textColor="@drawable/text_green_selector"
                android:id="@+id/tvAddEditable_FP"
                android:text="@string/add"
                android:layout_alignParentRight="true"
                />

            <TextView
                style="@style/AppTheme.TextView"
                android:text="@string/gender"
                android:id="@+id/tvGender_FP"
                android:layout_below="@id/tvBirthdayEditable_FP"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/feamle"
                android:id="@+id/ivFemale_FP"
                android:layout_below="@id/tvBirthdayEditable_FP"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                />

            <android.support.v7.widget.SwitchCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="18sp"
                android:id="@+id/swGenderEditable_FP"
                android:layout_toLeftOf="@id/ivFemale_FP"
                android:layout_toStartOf="@id/ivFemale_FP"
                android:layout_below="@id/tvBirthdayEditable_FP"

                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/male"
                android:layout_below="@id/tvBirthdayEditable_FP"
                android:layout_toLeftOf="@id/swGenderEditable_FP"
                />



        </RelativeLayout>

        <TextView
            android:id="@+id/tvSaveEditable_FP"
            android:layout_marginTop="20dp"
            style="@style/AppTheme.Button"
            android:text="@string/save" />


    </LinearLayout>
