<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="20dp">

    <com.andreabaccega.widget.FormEditText
        android:id="@+id/etEmail_FA"
        style="@style/AppTheme.EditText"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        custom:testType="email" />

    <com.andreabaccega.widget.FormEditText
        android:id="@+id/etRunId_FA"
        style="@style/AppTheme.EditText"
        android:layout_below="@id/etEmail_FA"
        android:hint="@string/hint_run_id"
        android:inputType="number"
        android:singleLine="true"
        custom:testType="numeric" />


    <TextView
        android:id="@+id/tvAdd_FA"
        style="@style/AppTheme.Button"
        android:layout_alignParentBottom="true"
        android:text="@string/add" />

</RelativeLayout>