<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:padding="@dimen/dialog_forgot_padding"
    android:background="@color/dialog_background"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvForgotPassword_DFP"
        android:text="@string/dialog_forgot_password_title"
        android:textColor="@color/text_color_dark_grey"
        android:textSize="@dimen/dialog_forgot_title_size"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/dialog_forgot_views_margins"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvEnterEmail_DFP"
        android:text="@string/dialog_forgot_password_enter_email"
        android:textColor="@color/text_color_dark_grey"
        android:layout_below="@id/tvForgotPassword_DFP"
        android:textSize="@dimen/dialog_forgot_enter_email_size"
        android:layout_marginBottom="@dimen/dialog_forgot_views_margins"/>
    <com.andreabaccega.widget.FormEditText
        android:id="@+id/fetEmail_DFP"
        android:layout_below="@id/tvEnterEmail_DFP"
        style="@style/AppTheme.EditText"
        android:layout_marginTop="0dp"
        android:hint="@string/hint_email"
        custom:testType="email"
        android:inputType="textEmailAddress"
        android:text="yo@yo.com"
        android:singleLine="true"
        android:layout_marginBottom="@dimen/dialog_forgot_bottom_margin"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvSend_DFP"
        android:textColor="@color/text_color_blue"
        android:text="@string/dialog_forgot_password_send"
        android:layout_below="@id/fetEmail_DFP"
        android:textSize="@dimen/dialog_forgot_buttons_size"
        android:textStyle="bold"
        android:layout_alignRight="@id/fetEmail_DFP"
        android:layout_marginRight="@dimen/dialog_forgot_send_margin"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvCancel_DFP"
        android:textColor="@color/text_color_dark_grey"
        android:text="@string/dialog_forgot_password_cancel"
        android:layout_toLeftOf="@id/tvSend_DFP"
        android:layout_below="@id/fetEmail_DFP"
        android:textSize="@dimen/dialog_forgot_buttons_size"
        android:textStyle="bold"
        android:layout_marginRight="@dimen/dialog_forgot_cancel_margin"/>
</RelativeLayout>