<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/tvTimer_FT"
        android:gravity="center"
        android:textColor="@color/text_color_black"
        android:text="@string/timer_zero"
        android:textSize="50sp"
        android:padding="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="20dp"
        android:weightSum="3"
        android:id="@+id/llButtonsContainer_FT">

        <TextView
            android:id="@+id/tvSplit_FT"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/AppTheme.Button"
            android:text="@string/button_split"/>
        <TextView
            android:id="@+id/tvStart_FT"
            style="@style/AppTheme.Button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/button_start"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"/>
        <TextView
            android:id="@+id/tvFinish_FT"
            style="@style/AppTheme.Button"
            android:text="@string/button_finish"
            android:layout_width="0dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lvRunners_FT"
        android:layout_below="@id/tvTimer_FT"
        android:divider="@android:color/transparent"
        android:layout_above="@id/llButtonsContainer_FT"
        android:listSelector="@android:color/transparent"
        android:scrollbars="none"/>

</RelativeLayout>