<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/linearLayout4" android:padding="@dimen/btn_container_padding">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop"
                android:id="@+id/btnStop_FR" android:layout_weight="1"
                style="@style/AppTheme.Button"
                android:layout_marginRight="@dimen/small_margin"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play"
                android:id="@+id/btnPlayPause_FR" android:layout_weight="1"
                style="@style/AppTheme.Button" android:layout_marginLeft="@dimen/small_margin"
                />
    </LinearLayout>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timer_zero"
            android:id="@+id/tvTimer_FR" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"
            android:textColor="@color/text_color_black" android:textSize="50sp" android:gravity="center"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTimer_FR"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@color/primary_blue"
            android:id="@+id/linearLayout2">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distance"
                android:id="@+id/tvDistance_FR" android:layout_weight="1" android:textColor="@color/text_color_white"
                android:layout_margin="@dimen/default_margin" android:gravity="center"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/elevation"
                android:id="@+id/tvElevation_FR" android:layout_weight="1" android:textColor="@color/text_color_white"
                android:gravity="center" android:layout_margin="@dimen/default_margin"/>
    </LinearLayout>
    <com.google.android.gms.maps.MapView android:layout_width="match_parent"
                                         android:layout_height="match_parent" android:layout_below="@+id/linearLayout2"
                                         android:layout_above="@+id/linearLayout4" android:id="@+id/map_FR">

    </com.google.android.gms.maps.MapView>

</RelativeLayout>